fecdat/force-app/main/default/objects/FEC_CIC__c/FEC_CIC__c.object-meta.xml
<CustomObject>
    <label>CIC</label>
    <nameField>
        <displayFormat>CICN - {0}</displayFormat>
        <label>CIC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CIC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>