fecdat/force-app/main/default/objects/FEC_CIC__c/fields/FEC_Business_Month_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Business_Month_Date__c</fullName>
    <label>Business Month/ Date</label>
    <type>Date</type>
</CustomField>