fecdat/force-app/main/default/objects/FEC_CIC__c/fields/FEC_CIC_Debt_Group__c.field-meta.xml
<CustomField>
    <fullName>FEC_CIC_Debt_Group__c</fullName>
    <label>CIC Debt Group</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>