fecdat/force-app/main/default/objects/FEC_CIC__c/fields/FEC_DPD__c.field-meta.xml
<CustomField>
    <fullName>FEC_DPD__c</fullName>
    <label>DPD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>