fecdat/force-app/main/default/objects/FEC_CIC__c/fields/FEC_Max_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Max_Bank_Name__c</fullName>
    <label>Max Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>