fecdat/force-app/main/default/objects/FEC_CIC__c/fields/FEC_Max_CIC__c.field-meta.xml
<CustomField>
    <fullName>FEC_Max_CIC__c</fullName>
    <label>Max CIC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>