fecdat/force-app/main/default/objects/FEC_CIC__c/fields/FEC_Principal_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>FEC_Principal_Outstanding__c</fullName>
    <label>Principal Outstanding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>