fecdat/force-app/main/default/objects/FEC_CIC__c/fields/FEC_Processed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FEC_Processed_Date_Time__c</fullName>
    <label>Processed Date Time</label>
    <type>Date</type>
</CustomField>