fecdat/force-app/main/default/objects/FEC_CIC__c/fields/FEC_Term__c.field-meta.xml
<CustomField>
    <fullName>FEC_Term__c</fullName>
    <label>Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>